@@ -1,7 +1,6 @@
 package com.example.front.config;
 
-
-
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.context.annotation.Bean;
@@ -20,10 +19,12 @@ public class CorsConfig {
 
 	    CorsConfiguration config = new CorsConfiguration();
 
-	    config.setAllowedOrigins(List.of("http://localhost:5500"));
-	    config.setAllowedMethods(List.of("*"));
-	    config.setAllowedHeaders(List.of("*"));
-	    config.setAllowCredentials(true);
+	    config.setAllowedOrigins(Arrays.asList("http://127.0.0.1:5500", "http://localhost:5500"));
+	    config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+	    config.setAllowedHeaders(Arrays.asList("Content-Type", "Authorization"));
+	    config.setAllowCredentials(true); // 如果要傳遞 Cookie/Session，這行必須為 true
+
+
 
 	    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 	    source.registerCorsConfiguration("/**", config);
